--- a/package.json
+++ b/package.json
@@ -9,21 +9,16 @@
     "seed": "node scripts/seed-database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "techfix",
-    "repair",
-    "api"
-  ],
+  "keywords": ["techfix", "repair", "api"],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-validator": "^7.3.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "nodemailer": "^6.9.7",
