--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
     "seed": "node scripts/seed-database.js",
+    "reset": "node scripts/reset-database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["techfix", "repair", "api"],
